--- a/TaskManager/appsettings.json
+++ b/TaskManager/appsettings.json
@@ -1,5 +1,6 @@
 {"ConnectionStrings": {
-  "DefaultConnection": "Host=localhost;Database=TaskManagerDB;Username=postgres;Password=postgres"
+  "DefaultConnection": "Host=ep-rapid-snow-a5mw9dxx.us-east-2.aws.neon.tech;Database=TaskManagerDB;Username=TaskManagerDB_owner;Password=Q69jrdAUtcYH"
+
 },
   "Logging": {
     "LogLevel": {
@@ -9,3 +10,5 @@
   },
   "AllowedHosts": "*"
 }
+
+
